# file-encryptor

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go  out  test.ciphertext  test.in  test.key  test.out
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml
examples/: fe-quick.sh
src/: cli.rs  crypto.rs  error.rs  ioutils.rs  lib.rs  main.rs
src/command/: encryptor.rs  keygen.rs  mod.rs  open.rs  seal.rs
src/crypto/: aesgcm.rs  block.rs  cipher.rs  encoding.rs  encryptor.rs  kdf.rs  mod.rs  pkcs7.rs  tag.rs
