[package]
name = "file-encryptor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rpassword = "7.3.1"
scrypt = { version = "0.11.0", default-features = false, features = ["std"] }
aes = { version = "0.8.4" }
rayon = { version = "1.10.0" }
anyhow = "1.0.86"
rand = { version = "0.8.5", features = ["default"] }

# for testing
aes-gcm = { version = "0.10.3", features = ["aes", "getrandom"] }
num = { version = "0.4.3", features = ["std"] }
